[package]
name = "plank"
version = "0.1.0"
edition = "2024"

[dependencies]
atomic-write-file = "0.2.3"
camino = "1.1.9"
clap = { version = "4.5.36", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.8"
ignore = "0.4.23"
log = "0.4.27"
petgraph = "0.8.1"
quick-xml = { version = "0.37.4", features = ["overlapped-lists", "serialize"] }
regex-lite = "0.1.6"
serde = { version = "1.0.219", features = ["derive"] }
