[package]
name = "plank"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alluring-mushroom/plank"
readme = "README.md"
description = "A tool to generate the layers of a Dockerfile from many packages defined by package.xml files"
keywords = ["ros2", "build", "docker"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
atomic-write-file = "0.2.3"
camino = "1.1.9"
clap = { version = "4.5.36", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.8"
ignore = "0.4.23"
log = "0.4.27"
petgraph = "0.8.1"
quick-xml = { version = "0.37.4", features = ["overlapped-lists", "serialize"] }
regex-lite = "0.1.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.146"
